--- a/DesktopApp/src/edu/esprit/gui/Livre.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Livre.fxml
@@ -28,6 +28,9 @@
          <effect>
             <Glow level="0.43" />
          </effect>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ListView>
       <StackPane layoutX="258.0" prefHeight="576.0" prefWidth="793.0" styleClass="root" stylesheets="@styles/fxmlmaktabti.css">
          <children>
@@ -36,19 +39,19 @@
             <Pane fx:id="pnlOrders" prefHeight="200.0" prefWidth="200.0" />
             <Pane fx:id="pnlOverview" blendMode="SRC_ATOP" prefHeight="596.0" prefWidth="820.0" stylesheets="@styles/fxmlmaktabti.css">
                <children>
-                  <TextField layoutX="658.0" layoutY="69.0" opacity="0.7" prefHeight="26.0" prefWidth="121.0" promptText="search" style="-fx-background-color: #02030A; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" stylesheets="@styles/fxmlmaktabti.css">
+                  <TextField fx:id="search" layoutX="651.0" layoutY="70.0" onKeyTyped="#search_livre" opacity="0.66" prefHeight="25.0" prefWidth="128.0" promptText="search" style="-fx-border-radius: 2em;" styleClass="root" stylesheets="@styles/fxmlmaktabti.css" text="search">
                      <font>
                         <Font size="11.0" />
                      </font>
                      <effect>
-                        <Bloom />
+                        <Lighting bumpInput="$null" diffuseConstant="1.33">
+                           <light>
+                              <Light.Distant />
+                           </light>
+                        </Lighting>
                      </effect>
                   </TextField>
-                  <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="772.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/icons8_Search_52px.png" />
-                     </image>
-                  </ImageView>
+                  <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="765.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true" />
                   <Label layoutX="10.0" layoutY="82.0" prefHeight="35.0" prefWidth="121.0" text="Livre:" underline="true">
                      <font>
                         <Font name="System Bold Italic" size="32.0" />
@@ -101,20 +104,56 @@
                   </VBox>
                   <VBox layoutX="135.0" layoutY="164.0" prefHeight="166.0" prefWidth="153.0" spacing="21.0">
                      <children>
-                        <TextField fx:id="titre" layoutX="10.0" layoutY="10.0" />
-                        <DatePicker fx:id="date_pub" />
-                        <TextField fx:id="langue" layoutX="10.0" layoutY="10.0" />
-                        <TextField fx:id="isbn" layoutX="10.0" layoutY="10.0" />
-                        <TextField fx:id="nb_pages" layoutX="10.0" layoutY="10.0" />
-                        <TextField fx:id="resume" layoutX="10.0" layoutY="10.0" />
-                        <TextField fx:id="prix" layoutX="10.0" layoutY="240.0" />
+                        <TextField fx:id="titre" layoutX="10.0" layoutY="10.0">
+                           <cursor>
+                              <Cursor fx:constant="TEXT" />
+                           </cursor></TextField>
+                        <DatePicker fx:id="date_pub">
+                           <cursor>
+                              <Cursor fx:constant="CLOSED_HAND" />
+                           </cursor></DatePicker>
+                        <TextField fx:id="langue" layoutX="10.0" layoutY="10.0">
+                           <cursor>
+                              <Cursor fx:constant="TEXT" />
+                           </cursor></TextField>
+                        <TextField fx:id="isbn" layoutX="10.0" layoutY="10.0">
+                           <cursor>
+                              <Cursor fx:constant="TEXT" />
+                           </cursor></TextField>
+                        <TextField fx:id="nb_pages" layoutX="10.0" layoutY="10.0">
+                           <cursor>
+                              <Cursor fx:constant="TEXT" />
+                           </cursor></TextField>
+                        <TextField fx:id="resume" layoutX="10.0" layoutY="10.0">
+                           <cursor>
+                              <Cursor fx:constant="TEXT" />
+                           </cursor></TextField>
+                        <TextField fx:id="prix" layoutX="10.0" layoutY="240.0">
+                           <cursor>
+                              <Cursor fx:constant="TEXT" />
+                           </cursor></TextField>
                      </children>
                   </VBox>
-                  <Button fx:id="cat_add" layoutX="10.0" layoutY="507.0" mnemonicParsing="false" onAction="#addlivre" prefHeight="37.0" prefWidth="109.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Ajouter" />
-                  <Button fx:id="cat_update" layoutX="128.0" layoutY="507.0" mnemonicParsing="false" onAction="#updatelivre" prefHeight="37.0" prefWidth="109.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Mettre à jours" />
-                  <Button fx:id="cat_del" layoutX="251.0" layoutY="507.0" mnemonicParsing="false" onAction="#deletelivre" prefHeight="37.0" prefWidth="121.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Supprimer" />
-                  <ListView fx:id="listauteur" layoutX="376.0" layoutY="123.0" prefHeight="169.0" prefWidth="355.0" />
-                  <ListView fx:id="listcategorie" layoutX="376.0" layoutY="357.0" prefHeight="151.0" prefWidth="355.0" />
+                  <Button fx:id="cat_add" layoutX="10.0" layoutY="507.0" mnemonicParsing="false" onAction="#addlivre" prefHeight="37.0" prefWidth="109.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Ajouter">
+                     <cursor>
+                        <Cursor fx:constant="WAIT" />
+                     </cursor></Button>
+                  <Button fx:id="cat_update" layoutX="128.0" layoutY="507.0" mnemonicParsing="false" onAction="#updatelivre" prefHeight="37.0" prefWidth="109.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Mettre à jours">
+                     <cursor>
+                        <Cursor fx:constant="WAIT" />
+                     </cursor></Button>
+                  <Button fx:id="cat_del" layoutX="251.0" layoutY="507.0" mnemonicParsing="false" onAction="#deletelivre" prefHeight="37.0" prefWidth="121.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Supprimer">
+                     <cursor>
+                        <Cursor fx:constant="WAIT" />
+                     </cursor></Button>
+                  <ListView fx:id="listauteur" layoutX="376.0" layoutY="123.0" prefHeight="169.0" prefWidth="355.0">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></ListView>
+                  <ListView fx:id="listcategorie" layoutX="376.0" layoutY="357.0" prefHeight="151.0" prefWidth="355.0">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></ListView>
                   <Label layoutX="372.0" layoutY="73.0" prefHeight="27.0" prefWidth="153.0" text="Auteur :" textFill="#3c3a3a" underline="true">
                      <font>
                         <Font name="System Bold Italic" size="31.0" />
@@ -140,6 +179,26 @@
                         <Font name="Century" size="11.0" />
                      </font>
                   </Label>
+                  <ImageView fitHeight="25.0" fitWidth="22.0" layoutX="753.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/loupe%20(1).png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="290.0" layoutY="444.0" prefHeight="21.0" prefWidth="22.0" text="DT">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="498.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-écrivain-48.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="517.0" layoutY="318.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icons8-classer-par-catégories-48.png" />
+                     </image>
+                  </ImageView>
                </children>
                <effect>
                   <Lighting>
@@ -152,18 +211,45 @@
                   </Lighting>
                </effect>
                <cursor>
-                  <Cursor fx:constant="E_RESIZE" />
+                  <Cursor fx:constant="HAND" />
                </cursor>
             </Pane>
          </children>
       </StackPane>
-      <ImageView fitHeight="87.0" fitWidth="209.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView cache="true" fitHeight="87.0" fitWidth="209.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/2.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
       <AmbientLight color="CHARTREUSE" lightOn="true" />
       <PointLight color="CHARTREUSE" lightOn="true" />
+      <ImageView fx:id="PDF" fitHeight="37.0" fitWidth="30.0" layoutX="207.0" layoutY="504.0" onMouseClicked="#genererPDF">
+         <image>
+            <Image url="@images/pdf.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <Label layoutX="14.0" layoutY="144.0" prefHeight="25.0" prefWidth="109.0" text="Liste des Livre" textFill="#464646c7">
+         <font>
+            <Font name="System Bold Italic" size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <effect>
+            <Bloom />
+         </effect>
+      </Label>
+      <ImageView fitHeight="28.0" fitWidth="32.0" layoutX="128.0" layoutY="142.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/icons8-étagère-à-livres-94.png" />
+         </image>
+      </ImageView>
    </children>
    <effect>
       <DropShadow color="#1b1eeb" />
